<resources>
    <string name="app_name">PlandayDemo</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="birthdate">Birthdate</string>
    <string name="job_title">Job Title</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>